--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </head>
 <body>
     
-    <h2>Hello World!!s</h2>
+    <h2>Hello World!!</h2>
 
     <script>
         console.log("client")
         var socket = io();
+        socket.on("message", function(data){
+            console.log(data)
+        })
+        socket.on("event1", function (data) {
+                console.log(data.counter)
+            })
     </script>
 
 </body>
